--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,21 +1,21 @@
-site_name: SWE 795 - Intersections of Deep Learning & Software Engineering 
+site_name: An Empirical Investigation into the Use of Image Captioning for Automated Software Documentation 
 site_author: Kevin Moran
 copyright: '©2022 Kevin Moran'
 
 nav:
-  - Home: index.md
+   - Home: index.md
  # - Schedule: schedule.md
  # - Assignments: assignments.md
  # - Hands On Sessions: hands-on-sessions.md
  # - Syllabus: syllabus.md
-  - Resources: resources.md
+ # - Resources: resources.md
 
 theme:
   name: 'material'
   logo: 'images/GMU-Logo.png'
   favicon: 'images/GMU-Logo.png'
   features:
-    - navigation.tabs
+    #- navigation.tabs
   palette:
 
     # Toggle Light Mode
